# Smart-Reamer

./: .gitignore  README.md  tsconfig.json
backend/: package-lock.json  package.json
backend/api/: get-state.js  set-state.js
boards/schema/: schema.kicad_prl  schema.kicad_pro  schema.kicad_sch
firmware/: .gitignore
firmware/lib/: CMakeLists.txt
firmware/lib/src/: app.cpp  app.h  buf_writer.h  button.cpp  button.h  clock.cpp  clock.h  config.h  error_tracker.cpp  error_tracker.h  ext_api.h  gpio_mapping.h  magnetic_sensor.cpp  magnetic_sensor.h  measure.cpp  measure.h  measureable.h  motor.cpp  motor.h  params.cpp  params.h  writer.cpp  writer.h
firmware/main_esp32/: .gitignore  CMakeLists.txt  build.sh  flash.sh  partitions.csv  sdkconfig.defaults
firmware/main_esp32/main/: CMakeLists.txt  ext_api.cpp  main.c  mdns_service.c  web_server.c  web_server.h  websocket.c  websocket.h  wifi.c  wifi.h
firmware/main_esp32/main/certs/: servercert.pem
mobile/: .gitignore  AGENTS.md  CLAUDE.md  CONVENTIONS.md  README.md  app.json  package-lock.json  package.json  tsconfig.json
mobile/android/app/: build.gradle
mobile/app/: _layout.tsx
mobile/app/(main)/: _layout.tsx
mobile/ios/MyApp/: Info.plist
mobile/ios/MyApp.xcodeproj/: project.pbxproj
mobile/native/: MainApplication.kt  SelfSignedCertClientBuilder.kt  SelfSignedCertHandler.m
mobile/plugins/: withSelfSignedCert.js  withSwift5Pods.js
mobile/src/hooks/: index.ts
mobile/src/i18n/: config.ts
mobile/src/theme/: config.ts  dark-theme.ts  light-theme.ts  themeManager.ts  unistyles.ts
(+48 files in other folders)
